# mcp_approval

./: .gitignore  LICENSE  Makefile  README.md  WEB_APPROVAL_DESIGN.md  approval_client.py  approvals.py  cli_handler.py  demo_approval_client.py  demo_ols_approval_client.py  mcp_server.py  ols_approval_client.py  pyproject.toml  requirements.txt  test_server.py
